--- a/style_css/0style.css
+++ b/style_css/0style.css
@@ -19,7 +19,8 @@ body {
     /*background:  url("images/bj_0.jpg") no-repeat;*/
     /*background-size: cover;*/
     /*background-repeat: no-repeat;;*/
-
+    /*background: url(../images/bd_bgc.png);*/
+    background-color: #fff;
 }
 
 header {
@@ -60,9 +61,13 @@ ul {
     background: #e3e4e5;
     border: 1px solid #dddddd;
     font-size: 12px;
-    width: 1190px;
+   width: auto;
     margin: 0 auto;
 }
+.foot_vi img{
+    width: auto;
+}
+
 
 .city {
     margin-left: 300px;
@@ -79,17 +84,17 @@ ul {
     margin: 10px 12px 0;
 }
 
-.mobile {
-    position: relative;
-}
+/*.mobile {*/
+    /*position: relative;*/
+/*}*/
 
-.mobile img {
-    position: absolute;
-    left: -13px;
-    top: 23px;
-    border: 1px solid #cccccc;
-    padding: 2px;
-}
+/*.mobile img {*/
+    /*position: absolute;*/
+    /*left: -13px;*/
+    /*top: 23px;*/
+    /*border: 1px solid #cccccc;*/
+    /*padding: 2px;*/
+/*}*/
 
 .middle {
     height: 140px;
@@ -106,7 +111,7 @@ ul {
 
 .logo a {
     display: block;
-    background: #cccccc url("images/logo_0.png") no-repeat;
+    background: #cccccc url("../images/logo_0.png") no-repeat;
     width: 240px;
     height: 65px;
 }
