--- a/style_css/nivo-slider.css
+++ b/style_css/nivo-slider.css
@@ -66,24 +66,24 @@
 }
 
 /* Caption styles */
-.nivo-caption {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    background: #000;
-    color: #fff;
-    width: 100%;
-    z-index: 8;
-    padding: 5px 10px;
-    opacity: 0.8;
-    overflow: hidden;
-    display: none;
-    -moz-opacity: 0.8;
-    filter: alpha(opacity=8);
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box; /* Firefox, other Gecko */
-    box-sizing: border-box; /* Opera/IE 8+ */
-}
+/*.nivo-caption {*/
+    /*position: absolute;*/
+    /*left: 0px;*/
+    /*bottom: 0px;*/
+    /*background: deeppink;*/
+    /*color: #fff;*/
+    /*width: 100%;*/
+    /*z-index: 8;*/
+    /*padding: 5px 10px;*/
+    /*opacity: 0.8;*/
+    /*overflow: hidden;*/
+    /*display: none;*/
+    /*-moz-opacity: 0.8;*/
+    /*filter: alpha(opacity=8);*/
+    /*-webkit-box-sizing: border-box; !* Safari/Chrome, other WebKit *!*/
+    /*-moz-box-sizing: border-box; !* Firefox, other Gecko *!*/
+    /*box-sizing: border-box; !* Opera/IE 8+ *!*/
+/*}*/
 
 .nivo-caption p {
     padding: 5px;
@@ -118,6 +118,7 @@
 .nivo-controlNav {
     text-align: center;
     padding: 15px 0;
+    margin-top: 0px;
 }
 
 .nivo-controlNav a {
