--- a/style_css/style.css
+++ b/style_css/style.css
@@ -81,7 +81,7 @@ a:hover, a:active {
     position: absolute;
     top: 0;
     left: 50px;
-    background: url(images/dev7logo.png) no-repeat;
+    background: url(../images/dev7logo.png) no-repeat;
     width: 60px;
     height: 67px;
     border: 0;
